[package]
name = "map_converter"
version = "0.1.0"
authors = ["ISSOtm <me@eldred.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dia-semver = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.6.1", features = ["serde"] }
tiled = "0.9.4"
